# vibecoding-comps

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
agent/: agent.py
agents/: __init__.py  base.py  naive.py  twap.py  vwap.py
engine/: __init__.py  background.py  matching.py  orderbook.py  price_model.py  scoring.py  simulation.py  tournament.py  types.py
server/: app.py  auth.py  config.py  storage.py  tournament.py
server/routes/: leaderboard.py  run.py  submit.py
server/sandbox/: Dockerfile  runner.py
server/static/: index.html  replay.html
tests/: test_engine.py
